Fix horizontal scrollbar in `<pre>` blocks

--- a/templates/assets/css/style.css
+++ b/templates/assets/css/style.css
@@ -204,7 +204,7 @@ code {
 }
 
 pre {
-    overflow-x: scroll;
+    overflow-x: auto;
     padding: 1rem;
     font-size: 0.875rem;
 }
